--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -13,7 +13,7 @@
         android:layout_height="84dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="104dp"
-        android:src="@drawable/img_no_avatar" />
+        app:srcCompat="@drawable/img_no_avatar" />
 
     <TextView
         android:id="@+id/profile_name"
