--- a/pinlockview/src/main/res/layout/layout_delete_item.xml
+++ b/pinlockview/src/main/res/layout/layout_delete_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clipChildren="false"
@@ -22,6 +23,6 @@
             android:clickable="false"
             android:focusable="false"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_backspace" />
+            app:srcCompat="@drawable/ic_backspace" />
     </LinearLayout>
 </LinearLayout>
